Fix intermmitent test failure. [Co-Authored with Claude Sonnet 5]